# rmcp-sensors

./: .gitignore  Cargo.toml  README.md
crates/rmcp-battery/: Cargo.toml
crates/rmcp-battery/src/: lib.rs  main.rs
crates/rmcp-bluetooth/: Cargo.toml
crates/rmcp-bluetooth/src/: lib.rs  main.rs
crates/rmcp-display/: Cargo.toml
crates/rmcp-display/src/: lib.rs  main.rs
crates/rmcp-git/: Cargo.toml
crates/rmcp-git/src/: lib.rs  main.rs
crates/rmcp-idle/: Cargo.toml
crates/rmcp-idle/src/: lib.rs  main.rs
crates/rmcp-network/: Cargo.toml
crates/rmcp-network/src/: lib.rs  main.rs
crates/rmcp-sysinfo/: Cargo.toml
crates/rmcp-sysinfo/src/: lib.rs  main.rs
crates/rmcp-usb/: Cargo.toml
crates/rmcp-usb/src/: lib.rs  main.rs
crates/rmcp-weather/: Cargo.toml
crates/rmcp-weather/src/: lib.rs  main.rs
src/: main.rs
