[workspace]
resolver = "2"
members = [
    "crates/rmcp-display",
    "crates/rmcp-idle",
    "crates/rmcp-network",
    "crates/rmcp-usb",
    "crates/rmcp-battery",
    "crates/rmcp-bluetooth",
    "crates/rmcp-git",
    "crates/rmcp-sysinfo",
    "crates/rmcp-weather",
]

[package]
name = "rmcp-sensors"
version = "0.4.0"
edition = "2021"
description = "Cross-platform environmental awareness MCP server suite - system info, displays, idle time, network, USB, battery, bluetooth, git, weather"
license = "MIT"
repository = "https://github.com/sqrew/rmcp-sensors"
keywords = ["mcp", "ai", "sensors", "environment", "rmcp"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "rmcp-sensors"
path = "src/main.rs"

[dependencies]
# MCP framework
rmcp = { version = "0.12", features = ["server", "transport-io"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Sensor dependencies (unified implementation)
display-info = "0.5.7"
user-idle = "0.6"
network-interface = "2"
nusb = "0.1"
battery = "0.7"
btleplug = "0.11"
git2 = "0.20"
sysinfo = "0.35"
reqwest = { version = "0.12", features = ["json"] }
chrono = "0.4"
urlencoding = "2.1"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
