[package]
name = "rmcp-display"
version = "0.1.0"
edition = "2021"
description = "Cross-platform MCP server for display/monitor information"
license = "MIT"
repository = "https://github.com/sqrew/rmcp-display"

[[bin]]
name = "rmcp-display"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
rmcp = { version = "0.12", features = ["server", "transport-io"] }
tokio = { version = "1", features = ["full", "process"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
display-info = "0.5.7"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
