[package]
name = "rmcp-network"
version = "0.1.0"
edition = "2021"
description = "Cross-platform MCP server for network interface information"
license = "MIT"
repository = "https://github.com/sqrew/rmcp-network"

[[bin]]
name = "rmcp-network"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
rmcp = { version = "0.12", features = ["server", "transport-io"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
network-interface = "2"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
